--- a/JavaBasics/pom.xml
+++ b/JavaBasics/pom.xml
@@ -21,5 +21,39 @@
       <version>4.6</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>jboss</groupId>
+          <artifactId>jbossall-client</artifactId>
+          <version>4.2.2.GA</version>
+      </dependency>
+      <dependency>
+          <groupId>jboss</groupId>
+          <artifactId>jnpserver</artifactId>
+          <version>4.2.2.GA</version>
+      </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.9</version>
+      </dependency>
+
+
   </dependencies>
+    <build>
+        <finalName>JavaServerFaces</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
+
+
+
