--- a/servlet-errors/servlet-errors-war/build.gradle
+++ b/servlet-errors/servlet-errors-war/build.gradle
@@ -3,4 +3,5 @@ apply plugin: 'jetty'
 
 dependencies {
     compile project(':servlet-errors')
+    compile 'org.apache.geronimo.specs:geronimo-servlet_2.5_spec:1.2'
 }
